corrected footer nav  alignment

--- a/src/sass/base/_base.headings.scss
+++ b/src/sass/base/_base.headings.scss
@@ -22,8 +22,8 @@ $heading-m-hero-margin-bottom-small: 45px;
 $heading-m-hero-margin-bottom-medium: 60px;
 
 // FOOTER
-$heading-l-footer-font-size-small: 12px;
-$heading-l-footer-font-size-medium: 18px;
+$heading-l-footer-font-size-small: 17px;
+$heading-l-footer-font-size-medium: 22px;
 $heading-l-footer-font-size-large: 24px;
 
 // H3
